Layout changes and checkin feature improvements

--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -18,12 +18,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true">
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="@{viewModel.eventLoaded, default=gone}">
+            android:visibility="@{viewModel.eventLoaded, default=visible}">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -123,9 +124,10 @@
                                     android:layout_gravity="center"
                                     android:layout_weight="1"
                                     android:drawableLeft="@drawable/ic_check"
+                                    android:enabled="@{viewModel.doCheckin ? false : true}"
                                     android:gravity="center"
                                     android:onClick="@{viewModel::onClickCheckin}"
-                                    android:text="@string/detail_check_in_label"
+                                    android:text="@string/detail_checkin_label"
                                     android:textAllCaps="false"
                                     android:textSize="14sp" />
 
@@ -199,12 +201,14 @@
                             android:id="@+id/checkinLabel"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="10dp"
                             android:text="@{viewModel.checkinCount > 0 ? viewModel.checkinCount + ` comparecerão` : `Ninguém confirmou presença neste evento`}"
                             android:textSize="14sp"
                             android:textStyle="bold" />
 
-                        <View style="@style/HorizontalSeparator" />
+                        <View
+                            style="@style/HorizontalSeparator"
+                            android:layout_marginTop="10dp"
+                            android:visibility="@{viewModel.checkinCount > 0 ? View.VISIBLE : View.GONE}" />
 
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/peopleList"
@@ -223,8 +227,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#99000000"
-            android:gravity="center"
+            android:layout_marginTop="20dp"
+            android:gravity="top|center"
             android:visibility="@{viewModel.loading, default=gone}">
 
             <ProgressBar
@@ -232,6 +236,116 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/background_top_stroke"
+            android:clickable="true"
+            android:visibility="@{viewModel.doCheckin ? View.VISIBLE : View.GONE}">
+
+            <ImageView
+                android:id="@+id/close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right"
+                android:layout_margin="10dp"
+                android:onClick="@{viewModel::onClickCheckin}"
+                android:padding="5dp"
+                android:src="@drawable/ic_close"
+                android:visibility="@{viewModel.checkinLoading ? View.GONE : View.VISIBLE}" />
+
+            <LinearLayout
+                android:id="@+id/checkinLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/checkin_label"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:visibility="@{viewModel.checkinLoading ? View.GONE : View.VISIBLE}" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:visibility="@{viewModel.checkinLoading ? View.GONE : View.VISIBLE}">
+
+                    <EditText
+                        android:id="@+id/checkinName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/checkin_name_hint"
+                        android:imeOptions="actionNext"
+                        android:singleLine="true"
+                        android:textSize="16sp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="-5dp"
+                    android:text="@string/checkin_name_error"
+                    android:textColor="@color/red"
+                    android:textSize="12sp"
+                    android:visibility="@{viewModel.nameError, default=gone}" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:visibility="@{viewModel.checkinLoading ? View.GONE : View.VISIBLE}">
+
+                    <EditText
+                        android:id="@+id/checkinEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/checkin_email_hint"
+                        android:imeOptions="actionDone"
+                        android:inputType="textEmailAddress"
+                        android:textSize="16sp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/checkin_email_error"
+                    android:textColor="@color/red"
+                    android:textSize="12sp"
+                    android:visibility="@{viewModel.emailError, default=gone}" />
+
+                <TextView
+                    android:id="@+id/message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="3dp"
+                    android:gravity="center"
+                    android:text="@string/checkin_error_response"
+                    android:textColor="@color/red"
+                    android:visibility="@{viewModel.onCheckinError, default=gone}" />
+
+                <ProgressBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="@{viewModel.checkinLoading ? View.VISIBLE : View.GONE}" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 </layout>
