--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#64C830</color>
+    <color name="colorPrimaryDark">#126F38</color>
+    <color name="colorAccent">#333333</color>
 
     <!--SOLID-->
     <color name="black">#000000</color>
-        <color name="gray">#BBBBBB</color>
+    <color name="darkGray">#888888</color>
+    <color name="gray">#BBBBBB</color>
     <color name="lightGray">#EEEEEE</color>
     <color name="white">#FFFFFF</color>
     <color name="red">#ff1100</color>
