--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,9 +9,7 @@
     </style>
 
     <!-- Splash -->
-    <style name="AppTheme.Splash" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowTranslucentStatus">true</item>
+    <style name="AppTheme.Splash">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
@@ -26,20 +24,6 @@
         <item name="android:layout_width">2dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:background">@color/lightGray</item>
-    </style>
-
-    <style name="Theme.Transparent" parent="Theme.AppCompat.Light">
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowBackground">@color/darkTransparent</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:backgroundDimEnabled">false</item>
-        <item name="android:windowAnimationStyle">@style/CustomDialogAnimation</item>
-    </style>
-
-    <style name="CustomDialogAnimation">
-        <item name="android:windowEnterAnimation">@anim/fade_in</item>
-        <item name="android:windowExitAnimation">@anim/fade_out</item>
     </style>
 
 </resources>
